--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".MainActivity">
+
+<!-- شريط الأدوات -->
+<com.google.android.material.appbar.AppBarLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="wrap_content"
+    android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.MyTranslate.AppBarOverlay">
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <!-- Spinner داخل Toolbar -->
+        <Spinner
+            android:id="@+id/spinner_fragment"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.MyTranslate.PopupOverlay" />
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:spinnerMode="dropdown"
+            android:paddingHorizontal="16dp"
+            android:background="@drawable/spinner"
 
-    </com.google.android.material.appbar.AppBarLayout>
+            />
+    </androidx.appcompat.widget.Toolbar>
 
-    <include layout="@layout/content_main" />
+</com.google.android.material.appbar.AppBarLayout>
 
-
+<!-- إدراج المحتوى من ملف خارجي -->
+<include layout="@layout/content_main" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-<!--    <?xml version="1.0" encoding="utf-8"?>-->
-<!--<androidx.coordinatorlayout.widget.CoordinatorLayout-->
-<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="match_parent"-->
-<!--tools:context=".MainActivity">-->
-
-<!--&lt;!&ndash; شريط الأدوات &ndash;&gt;-->
-<!--<com.google.android.material.appbar.AppBarLayout-->
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
 <!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".MainActivity">-->
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
+<!--    <com.google.android.material.appbar.AppBarLayout-->
 <!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        android:background="?attr/colorPrimary"-->
-<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:theme="@style/Theme.MyTranslate.AppBarOverlay">-->
 
-<!--        &lt;!&ndash; Spinner داخل Toolbar &ndash;&gt;-->
-<!--        <Spinner-->
-<!--            android:id="@+id/spinner_fragment"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_gravity="end"-->
-<!--            android:spinnerMode="dropdown"-->
-<!--            android:paddingHorizontal="16dp"-->
-<!--            android:background="@android:drawable/btn_dropdown" />-->
-<!--    </androidx.appcompat.widget.Toolbar>-->
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:background="?attr/colorPrimary"-->
+<!--            app:popupTheme="@style/Theme.MyTranslate.PopupOverlay" />-->
 
-<!--</com.google.android.material.appbar.AppBarLayout>-->
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
-<!--&lt;!&ndash; إدراج المحتوى من ملف خارجي &ndash;&gt;-->
-<!--<include layout="@layout/content_main" />-->
+<!--    <include layout="@layout/content_main" />-->
+
+
 
 <!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->
+
