--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,19 @@
     <style name="Theme.MyTranslate.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.MyTranslate.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Widget.App.SpinnerOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColor">#FFFFFF</item> <!-- لون النص -->
+        <item name="android:background">?attr/selectableItemBackground</item> <!-- خلفية عند الضغط -->
+    </style>
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorAccent">#FF4081</item>
+        <item name="android:spinnerItemStyle">@style/CustomSpinnerItem</item>
+    </style>
+
+    <style name="CustomSpinnerItem" parent="Widget.AppCompat.Spinner">
+        <item name="android:background">#FFEB3B</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
 </resources>
