--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -60,21 +60,74 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <!-- إدخال النص المراد ترجمته -->
-    <EditText
-        android:id="@+id/inputText"
+
+    <FrameLayout
+        android:id="@+id/inputTextFrame"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:hint="اكتب النص هنا"
-        android:gravity="top|start"
-        android:background="@drawable/edit_text_bg"
-        android:padding="12dp"
-        android:textSize="16sp"
-        android:inputType="textMultiLine"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/sourceLanguageSpinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent">
+
+    <!-- إدخال النص المراد ترجمته -->
+<!--    <EditText-->
+<!--        android:id="@+id/inputText"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="150dp"-->
+<!--        android:hint="اكتب النص هنا"-->
+<!--        android:gravity="top|start"-->
+<!--        android:background="@drawable/edit_text_bg"-->
+<!--        android:padding="12dp"-->
+<!--        android:textSize="16sp"-->
+<!--        android:inputType="textMultiLine"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/sourceLanguageSpinner"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_marginTop="16dp"/>-->
+        <EditText
+            android:id="@+id/inputText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="اكتب النص هنا"
+            android:gravity="center_vertical"
+            android:background="@drawable/edit_text_bg"
+            android:padding="12dp"
+            android:textSize="16sp"
+            android:inputType="textMultiLine" />
+
+        <ImageButton
+            android:id="@+id/speakButtoninput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/ic_mic"
+            android:contentDescription="صوت"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:padding="8dp"
+            android:visibility="gone"
+            android:layout_gravity="bottom|end"
+            android:scaleType="centerInside" />
+
+        <ImageView
+            android:id="@+id/pauseIconinput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+
+            android:contentDescription="صوت"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:padding="8dp"
+            android:visibility="gone"
+            android:layout_gravity="bottom|end"
+            android:scaleType="centerInside"
+            android:background="@drawable/ic_paus"
+ />
+    </FrameLayout>
 
     <!-- Guidelines لتقسيم الشاشة 4 أقسام -->
     <androidx.constraintlayout.widget.Guideline
@@ -116,7 +169,7 @@
         android:src="@drawable/ic_paste"
         app:layout_constraintEnd_toStartOf="@id/guideline25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/inputText" />
+        app:layout_constraintTop_toBottomOf="@id/inputTextFrame" />
 
     <ImageButton
         android:id="@+id/camButton"
@@ -132,7 +185,7 @@
         android:src="@drawable/ic_img"
         app:layout_constraintEnd_toStartOf="@id/guideline50"
         app:layout_constraintStart_toStartOf="@id/guideline25"
-        app:layout_constraintTop_toBottomOf="@id/inputText" />
+        app:layout_constraintTop_toBottomOf="@id/inputTextFrame" />
 
     <!-- زر الترجمة -->
     <Button
